Adding Buy Link

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </ul>
             <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
               <li class="nav-item">
-                <a class="btn btn-success fs-4 fw-bold px-4" href="#">Buy $Poowel</a>
+                <a class="btn btn-success fs-4 fw-bold px-4" href="https://raydium.io/swap/?outputCurrency=BHcPVARUJEV3rCAmbLgRm7QPmZotsCcHcKWwzvCSAHJi">Buy $Poowel</a>
               </li>
             </ul>
           </div>
@@ -222,7 +222,7 @@
             <a href="https://twitter.com/poowel_solana" class="btn btn-danger fs-5 px-4 py-2">Twitter</a>
             <a href="https://t.me/jerompoowel" class="btn btn-danger fs-5 px-4 py-2">Telegram</a>
             <a href="https://dexscreener.com/solana/7EnY9qYGXtWybZ3CP83x8gyK2FyhWgEuBjJFyQFnFWN9" class="btn btn-danger fs-5 px-4 py-2">Dexscreener</a>
-			<a href="https://www.dextools.io/app/en/solana/pair-explorer/7EnY9qYGXtWybZ3CP83x8gyK2FyhWgEuBjJFyQFnFWN9?t=1710447031135" class="btn btn-danger fs-5 px-4 py-2">`DexTools</a>
+			<a href="https://www.dextools.io/app/en/solana/pair-explorer/7EnY9qYGXtWybZ3CP83x8gyK2FyhWgEuBjJFyQFnFWN9?t=1710447031135" class="btn btn-danger fs-5 px-4 py-2">DexTools</a>
           </div>
         </div>
       </div>
