--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <div class="container">
             <a class="navbar-brand" href="#"
               ><img
-                src="assets/imgs/pic2.png"
+                src="assets/imgs/logo_headshot.png"
                 alt=""
                 class="img-fluid"
                 width="80"
