Updating how to buy

--- a/index.html
+++ b/index.html
@@ -820,7 +820,7 @@
                   <h4>Connect to Raydium. Go to Raydium in google chrome or on the browser inside your Phantom app. Connect your wallet. Paste the $POOWEL token address into Raydium, select $POOWEL, and confirm. When Phantom prompts you for a wallet signature, sign.</h4>
                   <br>
                   <h3>POOWEL</h3>
-                  <h4>Switch SOL for $POOWEL. We have Zero taxes so you don’t need to worry about buying with a specific slippage, although you may</h/4>
+                  <h4>Switch SOL for $POOWEL.</h/4>
 
 
           
